Fixed question width on mobile

--- a/app/assets/stylesheets/views/question.css.sass
+++ b/app/assets/stylesheets/views/question.css.sass
@@ -11,6 +11,7 @@
   +border-radius(4px)
   font-size: 13px
   min-width: 300px
+  width: 90%
   display: inline-block
   vertical-align: top
   @media (min-width: 650px) and (max-width: 860px)
